frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: se-for-cloud
  namespace: default
  labels:
    app: se-for-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: se-for-cloud
  template:
    metadata:
      labels:
        app: se-for-cloud
    spec:
      containers:
        - name: se-for-cloud
          image: senhao/se-cloud-frontend:latest
          ports:
            - containerPort: 3000
