frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: se-for-cloud
spec:
  ports:
    - nodePort: 31280
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: se-for-cloud
  type: NodePort
